<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_suzuki"
                style="@style/Question2Style"
                android:src="@drawable/suzuki"
                tools:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    style="@style/WrapContentStyle"
                    android:text="@string/q4"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp">

                    <RadioButton
                        style="@style/WrapContentStyle"
                        android:text="@string/q4_a1" />

                    <RadioButton
                        android:id="@+id/right_answer_cars"
                        style="@style/WrapContentStyle"
                        android:text="@string/q4_a2" />

                    <RadioButton
                        style="@style/WrapContentStyle"
                        android:text="@string/q4_a3" />

                    <RadioButton
                        style="@style/WrapContentStyle"
                        android:text="@string/q4_a4" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>