<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/textView_congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:hint="@string/you_smart"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/textView_score_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:hint="@string/you_smart"
        />
    <ImageView
        android:id="@+id/imageView_result"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/negative_result"
         />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"/>
</LinearLayout>